# coffee_images

./: .env.example  .gitattributes  .gitignore  CITATION.cff  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  compose.yaml  image_label_status.json  pyproject.toml
coffee_images/: CITATION.cff
coffee_images/data_collection/: bot_poller.py  image_scraper.py  telegram_api_test.py
coffee_images/inference/: __main__.py  segnet_weights.pth.tar  tools.py
coffee_images/inference/tests/: compute_masks_only.py
coffee_images/preprocessing/: masking_test.py  masking_workflow(2).ipynb  masking_workflow.py  models.py
coffee_images/training/: SegNet.py  coffee.py  create_train_set.py  test_gpu.py  train_SegNet.py  train_SegNet_runner.ipynb
coffee_images/training/tests/: test_labels.py  test_pairs.py
